# PeerBridge

./: README.md
backend/: .gitignore  Dockerfile  app.py  docker-compose.yml  entrypoint.sh  requirements.txt  run.py  settings.py
backend/app/: __init__.py  extensions.py  models.py  routes.py  schemas.py  sockets.py
backend/tests/: websocket_test.py
frontend/: .gitignore  copy_cpp_build.bat  index.html  main.js  package-lock.json  package.json  vite.config.mjs
frontend/electron/: grpc.cjs  grpc.js  ipc-handlers.js  main.js  preload.cjs  preload.js
frontend/proto/: peerbridge.proto
frontend/renderer/: index.html  index.js  styles.css
frontend/scripts/: dev-concurrent.js  prepare-build.js
frontend/src/: App.jsx  index.css  main.jsx  routes.jsx
frontend/src/components/: LoadingScreen.jsx
frontend/src/components/layout/: MainLayout.jsx
frontend/src/components/lobby/: ActiveLobby.jsx  CreateLobbyModal.jsx  JoinLobbyModal.jsx  LobbyIndicator.jsx
frontend/src/contexts/: LobbyContext.jsx  ThemeContext.jsx
frontend/src/lib/: api.js  axios.js  networking.js  socket.js  token.js
frontend/src/pages/: About.jsx  Friends.jsx  Lobby.jsx  Settings.jsx
frontend/src/pages/auth/: Landing.jsx  Login.jsx  Register.jsx
networking/: .gitignore  CMakeLists.txt  build_commands.txt  comands_to_run  generate_coverage.sh  peerbridge.manifest
networking/include/: IPCServer.hpp  NetworkConfigManager.hpp  NetworkingModule.hpp  P2PSystem.hpp  SystemStateManager.hpp  TUNInterface.hpp  Utils.hpp  ipc.hpp  logger.hpp  networking.hpp  p2p_system.hpp  stun.hpp  tun_interface.hpp
networking/include/interfaces/: IIPCServer.hpp  INetworkConfigManager.hpp  INetworkModule.hpp  IStun.hpp  ISystemStateManager.hpp  ITunInterface.hpp
networking/proto/: peerbridge.proto
networking/src/: IPCServer.cpp  Logger.cpp  NetworkConfigManager.cpp  NetworkingModule.cpp  P2PSystem.cpp  SystemStateManager.cpp  ipc.cpp  main.cpp  networking.cpp  p2p_system.cpp  tun_interface.cpp
networking/tests/: .gitignore  CMakeLists.txt  P2PSystem_test.cpp  PeerConnectionInfo_test.cpp  SystemStateManager_test.cpp  UDPNetwork_test.cpp  gtest_main.cpp  test_basic.cpp  trace.hpp
networking/tests/mocks/: IPCServerMock.hpp  NetworkConfigManagerMock.hpp  StunClientMock.hpp  SystemStateManagerMock.hpp  TunInterfaceMock.hpp  UDPNetworkMock.hpp
networking/wintun/include/: wintun.h
